fix: remove lpTag.lpActive forced visibility

--- a/client/css/_list.scss
+++ b/client/css/_list.scss
@@ -340,7 +340,6 @@ input.lpCategoryName { /* specificity */
     .lpWorn.lpActive,
     .lpConsumable.lpActive,
     .lpCamera.lpActive,
-    .lpTag.lpActive,
     .lpStar.lpStar1,
     .lpStar.lpStar2,
     .lpStar.lpStar3 {
